--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -13,9 +13,14 @@
             <input type="text" name="eventName" class="form-control">
         </label>
     </div>
+    <div class="form-group">
+        <label>Event Description
+            <input type="text" name="eventDescription" class="form-control">
+        </label>
+    </div>
 
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success">
+        <input type="submit" value="create" class="btn btn-success">
     </div>
 </form>
 
