--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -13,6 +13,11 @@
             <input type="text" name="eventName" class="form-control">
         </label>
     </div>
+    <div class="form-group">
+        <label>Descriptio
+            <input type="text" name="eventDescription" class="form-control">
+        </label>
+    </div>
 
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
