--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -6,16 +6,16 @@
 <h1>Create Events</h1>
 <header th:replace="fragments :: header"></header>
 
-
+<!--//changed name for both to match EventData object fields-->
 <form method="post">
     <div class="form-group">
         <label>Name
-            <input type="text" name="eventName" class="form-control">
+            <input type="text" name="name" class="form-control">
         </label>
     </div>
     <div class="form-group">
         <label>Descriptio
-            <input type="text" name="eventDescription" class="form-control">
+            <input type="text" name="description" class="form-control">
         </label>
     </div>
 
