--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -6,7 +6,7 @@
 <h1>Create Events</h1>
 <header th:replace="fragments :: header"></header>
 
-<!--//changed name for both to match EventData object fields-->
+<!--//changed name for both to match model/Event object fields-->
 <form method="post">
     <div class="form-group">
         <label>Name
