--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -3,25 +3,25 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<!--<h1>Create Events</h1>-->
 <header th:replace="fragments :: header"></header>
 
 <!--//changed name for both to match model/Event object fields-->
-<form method="post">
+<form method="post" th:action="@{/events/edit}">
     <div class="form-group">
         <label>Name
-            <input type="text" name="name" class="form-control">
+            <input type="text" th:value="${event.name}" name="name" class="form-control">
         </label>
     </div>
     <div class="form-group">
         <label>Description
-            <input type="text" name="description" class="form-control">
+            <input type="text" th:value="${event.description}" name="description" class="form-control">
         </label>
     </div>
 
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success">
+        <input type="submit" value="Edit" class="btn btn-success">
     </div>
+    <input type="hidden" th:value="${event.id}" name="eventId" />
 </form>
 
 </body>
