--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -14,8 +14,13 @@
         </label>
     </div>
     <div class="form-group">
-        <label>Descriptio
+        <label>Description
             <input type="text" name="description" class="form-control">
+        </label>
+    </div>
+    <div class="form-group">
+        <label>Contact Email
+            <input type="text" name="contactEmail" class="form-control">
         </label>
     </div>
 
